--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "^1.4.1",
     "lodash": "^4.17.4",
+    "raven-js": "^3.22.1",
     "vue": "^2.5.13",
     "vue-loader": "^13.7.0",
     "vue-lodash": "^1.0.4",
