--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.1",
+    "at-ui": "^1.3.2",
+    "at-ui-style": "^1.5.1",
     "axios": "^0.17.1",
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "^1.4.1",
@@ -12,7 +14,8 @@
     "vue-loader": "^13.7.0",
     "vue-lodash": "^1.0.4",
     "vue-template-compiler": "^2.5.13",
-    "vue-turbolinks": "^2.0.1"
+    "vue-turbolinks": "^2.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
